<resources>
    <string name="app_name">CCMS_Counselling_Mobile_Application</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="get_start">Get Start</string>
    <string name="app_logo">App logo</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
</resources>